After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739481 - rtsp-stream: leaks srtp decoder when leaving rtpbin
rtsp-stream: leaks srtp decoder when leaving rtpbin
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.4.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-01 06:03 UTC by Aleix Conchillo Flaqué
Modified: 2014-12-12 17:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
unref srtp decoder if any (838 bytes, patch)
2014-11-01 06:04 UTC, Aleix Conchillo Flaqué
committed Details | Review

Description Aleix Conchillo Flaqué 2014-11-01 06:03:40 UTC
rtsp-stream misses to unref srtp decoder when leaving rtpbin.
Comment 1 Aleix Conchillo Flaqué 2014-11-01 06:04:45 UTC
Created attachment 289767 [details] [review]
unref srtp decoder if any
Comment 2 Tim-Philipp Müller 2014-11-01 11:34:03 UTC
Pushed, thanks:

commit 7c267928ff8a74c15fe0821985c96d9fcda97f30
Author: Aleix Conchillo Flaqué <aleix@oblong.com>
Date:   Fri Oct 31 23:01:53 2014 -0700

    rtsp-stream: unref srtp decoder when leaving bin
    
    https://bugzilla.gnome.org/show_bug.cgi?id=739481
Comment 3 Tim-Philipp Müller 2014-12-12 17:03:31 UTC
Cherry-picked into 1.4 branch.