rtsp-stream: unref srtp decoder when leaving bin

https://bugzilla.gnome.org/show_bug.cgi?id=739481